// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CodeSearchResults /> basic rendering should render empty table data 1`] = `
<div
  className="pgn-transition-replace-group position-relative"
  style={
    Object {
      "height": null,
    }
  }
>
  <div
    style={
      Object {
        "padding": ".1px 0",
      }
    }
  >
    <div
      className="code-search-results border-bottom pb-4"
    >
      <div
        className="d-flex align-items-center justify-content-between mb-3"
      >
        <div
          className="flex-grow-1 text-truncate mr-3"
        >
          <h3
            className="lead m-0 text-truncate"
          >
            Search results for 
            <em>
              "
              test@test.com
              "
            </em>
          </h3>
        </div>
        <div
          className="flex-grow-0 flex-shrink-0"
        >
          <button
            className="close-search-results-btn btn btn-outline-primary"
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="fa fa-times mr-2"
              id="Icon6"
            />
            Close search results
          </button>
        </div>
      </div>
      <div
        className="alert fade alert-warning show"
        hidden={false}
        role="alert"
      >
        <div
          className="alert-dialog"
        >
          <div
            className="d-flex"
          >
            <div
              className="icon mr-2"
            >
              <span
                aria-hidden={true}
                className="fa fa-exclamation-circle"
                id="Icon7"
              />
            </div>
            <div
              className="message"
            >
              There are no results.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CodeSearchResults /> basic rendering should render error 1`] = `
<div
  className="pgn-transition-replace-group position-relative"
  style={
    Object {
      "height": null,
    }
  }
>
  <div
    style={
      Object {
        "padding": ".1px 0",
      }
    }
  >
    <div
      className="code-search-results border-bottom pb-4"
    >
      <div
        className="d-flex align-items-center justify-content-between mb-3"
      >
        <div
          className="flex-grow-1 text-truncate mr-3"
        >
          <h3
            className="lead m-0 text-truncate"
          >
            Search results for 
            <em>
              "
              test@test.com
              "
            </em>
          </h3>
        </div>
        <div
          className="flex-grow-0 flex-shrink-0"
        >
          <button
            className="close-search-results-btn btn btn-outline-primary"
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="fa fa-times mr-2"
              id="Icon8"
            />
            Close search results
          </button>
        </div>
      </div>
      <div
        className="alert fade alert-danger show"
        hidden={false}
        role="alert"
      >
        <div
          className="alert-dialog"
        >
          <div
            className="d-flex"
          >
            <div
              className="icon mr-2"
            >
              <span
                aria-hidden={true}
                className="fa fa-times-circle"
                id="Icon9"
              />
            </div>
            <div
              className="message"
            >
              <span
                className="title"
              >
                Unable to load data
              </span>
              Try refreshing your screen (Network Error)
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CodeSearchResults /> basic rendering should render loading 1`] = `
<div
  className="pgn-transition-replace-group position-relative"
  style={
    Object {
      "height": null,
    }
  }
>
  <div
    style={
      Object {
        "padding": ".1px 0",
      }
    }
  >
    <div
      className="code-search-results border-bottom pb-4"
    >
      <div
        className="d-flex align-items-center justify-content-between mb-3"
      >
        <div
          className="flex-grow-1 text-truncate mr-3"
        >
          <h3
            className="lead m-0 text-truncate"
          >
            Search results for 
            <em>
              "
              test@test.com
              "
            </em>
          </h3>
        </div>
        <div
          className="flex-grow-0 flex-shrink-0"
        >
          <button
            className="close-search-results-btn btn btn-outline-primary"
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="fa fa-times mr-2"
              id="Icon1"
            />
            Close search results
          </button>
        </div>
      </div>
      <div>
        <div
          className="sr-only"
        >
          Loading...
        </div>
        <span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <span
            className="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 25,
              }
            }
          >
            ‌
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CodeSearchResults /> basic rendering should render nothing visible when isOpen prop is false 1`] = `
<div
  className="pgn-transition-replace-group position-relative"
  style={
    Object {
      "height": null,
    }
  }
/>
`;

exports[`<CodeSearchResults /> basic rendering should render table data 1`] = `
<div
  className="pgn-transition-replace-group position-relative"
  style={
    Object {
      "height": null,
    }
  }
>
  <div
    style={
      Object {
        "padding": ".1px 0",
      }
    }
  >
    <div
      className="code-search-results border-bottom pb-4"
    >
      <div
        className="d-flex align-items-center justify-content-between mb-3"
      >
        <div
          className="flex-grow-1 text-truncate mr-3"
        >
          <h3
            className="lead m-0 text-truncate"
          >
            Search results for 
            <em>
              "
              test@test.com
              "
            </em>
          </h3>
        </div>
        <div
          className="flex-grow-0 flex-shrink-0"
        >
          <button
            className="close-search-results-btn btn btn-outline-primary"
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="fa fa-times mr-2"
              id="Icon2"
            />
            Close search results
          </button>
        </div>
      </div>
      <div
        className="code-search-results-table"
      >
        <div
          className="row"
        >
          <div
            className="col"
          >
            <div
              className="table-responsive"
            >
              <div
                className="pgn__data-table-layout-wrapper"
              >
                <div
                  className="pgn__data-table-layout-main"
                >
                  <div
                    className="pgn__data-table-wrapper"
                  >
                    <div
                      className="pgn__data-table-status-bar"
                    >
                      <div
                        className="pgn__data-table-status"
                      >
                        <div
                          className="pgn__data-table-status-left"
                        >
                          <div
                            className="pgn__smart-status"
                          >
                            Showing 
                            4
                             of 
                            4
                            .
                          </div>
                        </div>
                        <div
                          className="pgn__data-table-actions-right"
                        >
                          <div
                            className="pgn__data-table-toggle"
                          />
                          <div />
                        </div>
                      </div>
                    </div>
                    <div
                      className="pgn__data-table-container"
                    >
                      <table
                        className="pgn__data-table is-striped"
                        role="table"
                      >
                        <thead>
                          <tr
                            role="row"
                          >
                            <th
                              colSpan={1}
                              role="columnheader"
                            >
                              <span
                                className="d-flex align-items-center"
                              >
                                <span>
                                  Coupon Batch
                                </span>
                              </span>
                            </th>
                            <th
                              colSpan={1}
                              role="columnheader"
                            >
                              <span
                                className="d-flex align-items-center"
                              >
                                <span>
                                  Code
                                </span>
                              </span>
                            </th>
                            <th
                              colSpan={1}
                              role="columnheader"
                            >
                              <span
                                className="d-flex align-items-center"
                              >
                                <span>
                                  Redeemed
                                </span>
                              </span>
                            </th>
                            <th
                              colSpan={1}
                              role="columnheader"
                            >
                              <span
                                className="d-flex align-items-center"
                              >
                                <span>
                                  Redemption Date
                                </span>
                              </span>
                            </th>
                            <th
                              colSpan={1}
                              role="columnheader"
                            >
                              <span
                                className="d-flex align-items-center"
                              >
                                <span>
                                  Course Title
                                </span>
                              </span>
                            </th>
                            <th
                              colSpan={1}
                              role="columnheader"
                            >
                              <span
                                className="d-flex align-items-center"
                              >
                                <span>
                                  Actions
                                </span>
                              </span>
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          role="rowgroup"
                        >
                          <tr
                            className="pgn__data-table-row"
                            role="row"
                          >
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              Test Coupon Name
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              Y7XS3OGG7WB7KQ5R
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              <span
                                aria-hidden={true}
                                className="fa fa-check text-primary"
                                id="Icon3"
                              />
                              <span
                                className="sr-only"
                              >
                                has been redeemed
                              </span>
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              August 28, 2019
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              Test Course Title
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              -
                            </td>
                          </tr>
                          <tr
                            className="pgn__data-table-row"
                            role="row"
                          >
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              Test Coupon Name 2
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              CMX9N1LPGTUSL7DU
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              -
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              -
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              -
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              -
                            </td>
                          </tr>
                          <tr
                            className="pgn__data-table-row"
                            role="row"
                          >
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              Test Coupon Name
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              Y7XS3OGG7WB7KQ5R
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              <span
                                aria-hidden={true}
                                className="fa fa-check text-primary"
                                id="Icon4"
                              />
                              <span
                                className="sr-only"
                              >
                                has been redeemed
                              </span>
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              August 30, 2019
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              Test Course Title
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              -
                            </td>
                          </tr>
                          <tr
                            className="pgn__data-table-row"
                            role="row"
                          >
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              Test Coupon Name
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              FAG2LVLNHAKIXQ0Q
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              -
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              -
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              -
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              -
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                    <div
                      className="pgn__data-table-footer"
                    >
                      <div>
                        Showing 
                        4
                         of 
                        4
                        .
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="row mt-2"
        >
          <div
            className="col d-flex justify-content-center"
          >
            <nav
              aria-label="code-search-results-pagination"
              className="pagination-default"
            >
              <div
                aria-atomic={true}
                aria-live="polite"
                aria-relevant="text"
                className="sr-only"
              >
                Page 1, Current Page, of 1
              </div>
              <ul
                className="pagination"
              >
                <li
                  className="page-item disabled"
                >
                  <button
                    aria-label="Previous"
                    className="previous page-link btn btn-primary"
                    disabled={true}
                    onClick={[Function]}
                    tabIndex="-1"
                    type="button"
                  >
                    <div>
                      <span
                        className="pgn__icon"
                      >
                        <svg
                          aria-hidden={true}
                          fill="none"
                          focusable={false}
                          height={24}
                          role="img"
                          viewBox="0 0 24 24"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                      Previous
                    </div>
                  </button>
                </li>
                <li
                  className="page-item disabled"
                >
                  <button
                    aria-label="Next"
                    className="next page-link btn btn-primary"
                    disabled={true}
                    onClick={[Function]}
                    tabIndex="-1"
                    type="button"
                  >
                    <div>
                      Next
                      <span
                        className="pgn__icon"
                      >
                        <svg
                          aria-hidden={true}
                          fill="none"
                          focusable={false}
                          height={24}
                          role="img"
                          viewBox="0 0 24 24"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </button>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CodeSearchResults /> basic rendering should render table data when searchQuery is a code 1`] = `
<div
  className="pgn-transition-replace-group position-relative"
  style={
    Object {
      "height": null,
    }
  }
>
  <div
    style={
      Object {
        "padding": ".1px 0",
      }
    }
  >
    <div
      className="code-search-results border-bottom pb-4"
    >
      <div
        className="d-flex align-items-center justify-content-between mb-3"
      >
        <div
          className="flex-grow-1 text-truncate mr-3"
        >
          <h3
            className="lead m-0 text-truncate"
          >
            Search results for 
            <em>
              "
              FAG2LVLNHAKIXQ0Q
              "
            </em>
          </h3>
        </div>
        <div
          className="flex-grow-0 flex-shrink-0"
        >
          <button
            className="close-search-results-btn btn btn-outline-primary"
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="fa fa-times mr-2"
              id="Icon5"
            />
            Close search results
          </button>
        </div>
      </div>
      <div
        className="code-search-results-table"
      >
        <div
          className="row"
        >
          <div
            className="col"
          >
            <div
              className="table-responsive"
            >
              <div
                className="pgn__data-table-layout-wrapper"
              >
                <div
                  className="pgn__data-table-layout-main"
                >
                  <div
                    className="pgn__data-table-wrapper"
                  >
                    <div
                      className="pgn__data-table-status-bar"
                    >
                      <div
                        className="pgn__data-table-status"
                      >
                        <div
                          className="pgn__data-table-status-left"
                        >
                          <div
                            className="pgn__smart-status"
                          >
                            Showing 
                            1
                             of 
                            1
                            .
                          </div>
                        </div>
                        <div
                          className="pgn__data-table-actions-right"
                        >
                          <div
                            className="pgn__data-table-toggle"
                          />
                          <div />
                        </div>
                      </div>
                    </div>
                    <div
                      className="pgn__data-table-container"
                    >
                      <table
                        className="pgn__data-table is-striped"
                        role="table"
                      >
                        <thead>
                          <tr
                            role="row"
                          >
                            <th
                              colSpan={1}
                              role="columnheader"
                            >
                              <span
                                className="d-flex align-items-center"
                              >
                                <span>
                                  Coupon Batch
                                </span>
                              </span>
                            </th>
                            <th
                              colSpan={1}
                              role="columnheader"
                            >
                              <span
                                className="d-flex align-items-center"
                              >
                                <span>
                                  Code
                                </span>
                              </span>
                            </th>
                            <th
                              colSpan={1}
                              role="columnheader"
                            >
                              <span
                                className="d-flex align-items-center"
                              >
                                <span>
                                  Redeemed
                                </span>
                              </span>
                            </th>
                            <th
                              colSpan={1}
                              role="columnheader"
                            >
                              <span
                                className="d-flex align-items-center"
                              >
                                <span>
                                  Redemption Date
                                </span>
                              </span>
                            </th>
                            <th
                              colSpan={1}
                              role="columnheader"
                            >
                              <span
                                className="d-flex align-items-center"
                              >
                                <span>
                                  Assigned To
                                </span>
                              </span>
                            </th>
                            <th
                              colSpan={1}
                              role="columnheader"
                            >
                              <span
                                className="d-flex align-items-center"
                              >
                                <span>
                                  Course Title
                                </span>
                              </span>
                            </th>
                            <th
                              colSpan={1}
                              role="columnheader"
                            >
                              <span
                                className="d-flex align-items-center"
                              >
                                <span>
                                  Actions
                                </span>
                              </span>
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          role="rowgroup"
                        >
                          <tr
                            className="pgn__data-table-row"
                            role="row"
                          >
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              Test Coupon Name
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              FAG2LVLNHAKIXQ0Q
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              -
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              -
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              test@test.com
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              -
                            </td>
                            <td
                              className="pgn__data-table-cell-wrap"
                              role="cell"
                            >
                              <button
                                className="remind-btn btn-sm p-0 btn btn-link"
                                disabled={false}
                                onClick={[Function]}
                                type="button"
                              >
                                Remind
                              </button>
                               | 
                              <button
                                className="revoke-btn btn-sm p-0 btn btn-link"
                                disabled={false}
                                onClick={[Function]}
                                type="button"
                              >
                                Revoke
                              </button>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                    <div
                      className="pgn__data-table-footer"
                    >
                      <div>
                        Showing 
                        1
                         of 
                        1
                        .
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="row mt-2"
        >
          <div
            className="col d-flex justify-content-center"
          >
            <nav
              aria-label="code-search-results-pagination"
              className="pagination-default"
            >
              <div
                aria-atomic={true}
                aria-live="polite"
                aria-relevant="text"
                className="sr-only"
              >
                Page 1, Current Page, of 1
              </div>
              <ul
                className="pagination"
              >
                <li
                  className="page-item disabled"
                >
                  <button
                    aria-label="Previous"
                    className="previous page-link btn btn-primary"
                    disabled={true}
                    onClick={[Function]}
                    tabIndex="-1"
                    type="button"
                  >
                    <div>
                      <span
                        className="pgn__icon"
                      >
                        <svg
                          aria-hidden={true}
                          fill="none"
                          focusable={false}
                          height={24}
                          role="img"
                          viewBox="0 0 24 24"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                      Previous
                    </div>
                  </button>
                </li>
                <li
                  className="page-item disabled"
                >
                  <button
                    aria-label="Next"
                    className="next page-link btn btn-primary"
                    disabled={true}
                    onClick={[Function]}
                    tabIndex="-1"
                    type="button"
                  >
                    <div>
                      Next
                      <span
                        className="pgn__icon"
                      >
                        <svg
                          aria-hidden={true}
                          fill="none"
                          focusable={false}
                          height={24}
                          role="img"
                          viewBox="0 0 24 24"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </button>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
